@@ -4,10 +4,7 @@ import org.junit.Test;
 import org.junit.Assert;
 import org.hamcrest.core.Is;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
+import java.util.*;
 
 /**
  * Test.
@@ -20,10 +17,8 @@ public class UserConvertTest {
     public void when3usersThen3KeySetsInMap() {
         User us1 = new User(1, "Vit", "Moscow");
         User us2 = new User(234, "Ivan", "Barnaul");
-        List<User> lst = new ArrayList<>(Arrays.asList(us1, us2));
-        HashMap<Integer, User> expected = new HashMap<>();
-        expected.put(1, us1);
-        expected.put(234, us2);
+        List<User> lst = List.of(us1, us2);
+        Map<Integer, User> expected = Map.of(1, us1, 234, us2);
         HashMap<Integer, User> result = new UserConvert().process(lst);
         Assert.assertThat(result, Is.is(expected));
     }
